# requre

./: .packit.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.tests  Makefile  README.md  ci.fmf  pyproject.toml  python-requre.spec  setup.cfg
.github/workflows/: prepare-release.yml  pypi-publish.yml
docs/: conf.py  filter_format.rst  index.rst  installation.rst  modules.rst
docs/usages/: helpers.rst  import_system.rst  index.rst  postprocessing.rst
examples/: basic_storage.py  file_store.py  generic_decorator.py  request_example.py  request_uprade_import.py
fedora/: python-requre.spec
files/: zuul-pre-commit.yaml  zuul-reverse-dep-ogr.yaml  zuul-reverse-dep-packit.yaml  zuul-tests.yaml
files/tasks/: checkout_ogr.yaml  install-requre.yaml  ogr_reverse_dep_test.yaml  packit-deps.yaml  rpm-test-deps.yaml
plans/: ogr-integration.fmf  packit-integration.fmf  rpmlint.fmf
requre/: __init__.py  base_testclass.py  cassette.py  constants.py  exceptions.py  guess_object.py  import_system.py  modules_decorate_all_methods.py  objects.py  online_replacing.py  postprocessing.py  pytest_fixtures.py  record_and_replace.py  requre_dict_postprocessing.py  requre_patch.py  simple_object.py  singleton.py  storage.py  utils.py
requre/helpers/: __init__.py  files.py  function_output.py  guess_object.py  httpx_response.py  requests_response.py  simple_object.py  tempfile.py
requre/helpers/git/: commitinfo.py  fetchinfo.py  helper.py  pushinfo.py  repo.py
requre/helpers/ogr/: github.py  gitlab.py  pagure.py  replacements.py  response.py
requre/replacements/: ogr.py
tests/: conftest.py  full.fmf  smoke.fmf  smoke.sh  test_E2E_example.py  test_E2E_ogr.py  test_api.py  test_base_testclass.py  test_builtins.py  test_cassette.py  test_context_manager.py  test_duplication.py  test_e2e_test_patching.py  test_files.py  test_function_output.py  test_guess_objects.py  test_httpx.py  test_import_system.py  test_make_generic.py  test_modules_decorate_all_methods.py  test_object.py  test_online_replacing.py  test_pytest_fixtures.py  test_pytest_fixtures_autouse.py  test_record_requests_for_all_methods.py  test_request_response.py  test_storage.py  test_storage_modes.py  test_storage_postprocessing.py  test_tempfile.py  test_tuple.py  testbase.py
tests/data/: e2e_latency_replacements.py  e2e_latency_replacements_object.py  e2e_latency_test.py  e2e_test.py  e2e_test_replacements.py  e2e_test_replacements_special.py  requre_postprocessing.yaml  special_requre_module.py
tests/test_data/test_E2E_example/: Read.test.yaml  TestRead.test.yaml
tests/test_data/test_E2E_ogr/: tests.test_E2E_ogr.GithubTests.test_pr_comments.yaml  tests.test_E2E_ogr.GithubTests.test_pr_comments_record_requests_decorator.yaml
tests/test_data/test_builtins/: Test.test.yaml
tests/test_data/test_duplication/: Duplicated.test.yaml
(+31 files in other folders)
