[metadata]
name = requre
url = https://github.com/packit-service/requre
description = Library for testing python code what allows store output of various objects and use stored data for testing
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = packit@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Utilities
keywords =
    testing
    persistent_storage
    session_storage

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    click
    GitPython
    pytest
    PyYAML
    requests

[options.packages.find]
exclude =
    tests*

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    requre-patch = requre.requre_patch:requre_base
